new files added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar-expand-sm py-4 text-info-subtle border">
             <div class="container-fluild">
                 <div class="row">
-                    <div class="col-md-6 brand display-5 fw-bold">_O.W</div>
+                    <div class="col-md-6 brand display-5 fw-bold mx-5">_O.W</div>
                      <div class="d-none col-md-5 d-md-block">
                         <ul class="navbar-nav fs-4 justify-content-between">
                             <li class="nav-item"><a class="text-decoration-none text-secondary" href="">Home</a></li>
@@ -31,9 +31,9 @@
             <div class="col-md-6 h-100">
                 <img class=" mx-auto d-block w-50" src="img/Tech_img-removebg-preview.png" alt="">
             </div>
-            <div class="col-md-6 p-4">
+            <div class="col-md-6 px-4">
                 <p class="display-md-3 display-5 fw-bold text-tertiary">Hey, <br> i'm Owoeye Samuel,</p>
-                <p class="fs-4">Am currently a student learning Responsive Web Development (RWD), very passionate about it and open for collaboration.</p>
+                <p class="fs-4">Am currently a student learning Responsive Web Development (RWD),am very passionate about it and open for opportunities</p>
                 <div>
                     <button type="button" class=" me-3  px-2 btn bg-secondary text-white px-4">Resume</button>
                     <button type="button" class="  btn text-tertiary bg-white px-4 border">Explore</button>
@@ -41,12 +41,12 @@
             </div>
         </div>
     </div>
-    <div class=" py-5 text-tertiary text-center fs-3">
-        <i class="bi bi-github px-4"></i> 
-        <i class="bi bi-linkedin px-4"></i> 
-        <i class="bi bi-twitter px-4"></i> 
-        <i class="bi bi-facebook px-4"></i>
-        <i class="bi bi-envelope-fill px-4"></i>
+    <div class=" py-3 text-tertiary text-center fs-3">
+        <i class="bi bi-github px-3 px-md-4"></i> 
+        <i class="bi bi-linkedin px-3 px-md-4"></i> 
+        <i class="bi bi-twitter px-3 px-md-4"></i> 
+        <i class="bi bi-facebook px-3 px-md-4"></i>
+        <i class="bi bi-envelope-fill px-3 px-md-4"></i>
     </div>
     <script src="bootstrap.js"></script>
 </body>
