new files added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-6 px-4">
                 <p class="display-md-3 display-5 fw-bold text-tertiary">Hey, <br> i'm Owoeye Samuel,</p>
-                <p class="fs-4">Am currently a student learning Responsive Web Development (RWD),am very passionate about it and open for collaboration</p>
+                <p class="fs-4">Am currently a student learning Responsive Web Development (RWD),am very passionate about it and open for opportunities</p>
                 <div>
                     <button type="button" class=" me-3  px-2 btn bg-secondary text-white px-4">Resume</button>
                     <button type="button" class="  btn text-tertiary bg-white px-4 border">Explore</button>
