--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <nav class="navbar-expand-sm py-4 text-info-subtle border">
+    <!-- <nav class="navbar-expand-sm py-4 text-info-subtle border">
             <div class="container-fluild">
                 <div class="row">
                     <div class="col-md-6 brand display-5 fw-bold mx-5">_O.W</div>
@@ -25,7 +25,38 @@
                     <div class="col-md-2"></div>
                 </div>
             </div>
-    </nav>
+    </nav> -->
+    <header>
+        <nav class="navbar navbar-expand-md p-5 border">
+            <div class="container-fluid text-tertiary">
+                <div class="col-md-5 brand display-5 fw-bold">
+                    <a class="text-decoration-none text-secondary" href="">_O.W</a>
+                </div>
+                <button class="navbar-toggler justify-content-end align-items-center" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="toggle-navigation">
+                    <i class="navbar-toggler-icon"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="main-nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link px-md-4 fs-4" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-md-4 fs-4" href="">Explore</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-md-4 fs-4" href="">Articles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-md-4 fs-4" href="">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-md-4 fs-4" href="">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container-fluild py-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-6 h-100">
