--- a/index.html
+++ b/index.html
@@ -8,26 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
-<body>
-    <!-- <nav class="navbar-expand-sm py-4 text-info-subtle border">
-            <div class="container-fluild">
-                <div class="row">
-                    <div class="col-md-6 brand display-5 fw-bold mx-5">_O.W</div>
-                     <div class="d-none col-md-5 d-md-block">
-                        <ul class="navbar-nav fs-4 justify-content-between">
-                            <li class="nav-item"><a class="text-decoration-none text-secondary" href="">Home</a></li>
-                            <li class="nav-item"><a class="text-decoration-none text-secondary" href="">Explore</a></li>
-                            <li class="nav-item"><a class="text-decoration-none text-secondary" href="">Articles</a></li>                       
-                            <li class="nav-item"><a class="text-decoration-none text-secondary" href="">About</a></li>
-                            <li class="nav-item"><a class="text-decoration-none text-secondary" href="">contant</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-2"></div>
-                </div>
-            </div>
-    </nav> -->
+<body class="overflow-hidden">
     <header>
-        <nav class="navbar navbar-expand-md p-5 border">
+        <nav class="navbar navbar-expand-md p-md-5 p-3 border">
             <div class="container-fluid text-tertiary">
                 <div class="col-md-5 brand display-5 fw-bold">
                     <a class="text-decoration-none text-secondary" href="">_O.W</a>
@@ -38,36 +21,36 @@
                 <div class="collapse navbar-collapse" id="main-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link px-md-4 fs-4" href="">Home</a>
+                            <a class="nav-link px-md-4 fs-3" href="">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-md-4 fs-4" href="">Explore</a>
+                            <a class="nav-link px-md-4 fs-3" href="">Explore</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-md-4 fs-4" href="">Articles</a>
+                            <a class="nav-link px-md-4 fs-3" href="">Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-md-4 fs-4" href="">About</a>
+                            <a class="nav-link px-md-4 fs-3" href="">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-md-4 fs-4" href="">Contact</a>
+                            <a class="nav-link px-md-4 fs-3" href="">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container-fluild py-5">
+    <div class="container-xxl py-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-6 h-100">
-                <img class=" mx-auto d-block w-50" src="img/Tech_img-removebg-preview.png" alt="">
+                <img class=" mx-auto d-block w-75     " src="img/Tech_img-removebg-preview.png" alt="">
             </div>
             <div class="col-md-6 px-4">
-                <p class="display-md-3 display-5 fw-bold text-tertiary">Hey, <br> i'm Owoeye Samuel,</p>
-                <p class="fs-4">Am currently a student learning Responsive Web Development (RWD),am very passionate about it and open for opportunities</p>
+                <p class="display-4 display-md-5 fw-bold text-tertiary">Hey, <br> i'm Owoeye Samuel,</p>
+                <p class="fs-3">Am currently a student learning Responsive Web Development (RWD), am very passionate about it and open for opportunities</p>
                 <div>
-                    <button type="button" class=" me-3  px-2 btn bg-secondary text-white px-4">Resume</button>
-                    <button type="button" class="  btn text-tertiary bg-white px-4 border">Explore</button>
+                    <button type="button" class=" me-3  px-2 btn bg-secondary text-white fs-3 px-4">Resume</button>
+                    <button type="button" class="  btn text-tertiary bg-white px-4 border fs-3">Explore</button>
                 </div>
             </div>
         </div>
